change photo routes
